fixed overflow issue

--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -296,6 +296,7 @@ nav .logo img{
     .desc-words{
         font-size: 14px;
         line-height: 15px;
+        margin: 10px 0;
     }
     .hide-sm{
         display: none;
